--- a/parsl-perf-archive/502348794320483127/0bde29adb42749409d516146f26bd643/meta.yaml
+++ b/parsl-perf-archive/502348794320483127/0bde29adb42749409d516146f26bd643/meta.yaml
@@ -1,8 +1,9 @@
 artifact_uri: mlflow-artifacts:/502348794320483127/0bde29adb42749409d516146f26bd643/artifacts
+deleted_time: 1756355899981
 end_time: 1756355675946
 entry_point_name: ''
 experiment_id: '502348794320483127'
-lifecycle_stage: active
+lifecycle_stage: deleted
 run_id: 0bde29adb42749409d516146f26bd643
 run_name: my-run-name-2
 source_name: ''
